k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notefy-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # ADD THIS LINE BELOW:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - notefy.ramtiin.ir
    secretName: notefy-prod-tls
  rules:
  - host: notefy.ramtiin.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notefy-service
            port:
              number: 80
